Add more pages and additional assets
Add all main pages.
Add more assets.
Update template to easily change banner and add a block for scripts.
Include some new site banners.

--- a/pages/geronimo.html
+++ b/pages/geronimo.html
@@ -2,8 +2,8 @@
 
 {% block body %}
     <h2>Over Geronimo</h2>
-      
-      
+
+
     <h4>Handboogvereniging Geronimo</h4>
 
     <p class="textw">
@@ -49,23 +49,33 @@
         <td>
             <a target="_blank" href="{% static '/static/images_geronimo/composite.jpg' %}">
                 <img style="float:right;" src="{% static '/static/images_geronimo/thumbs/composite.jpg' %}" /><br>
-                Composite bow</td></a>
+                Composite bow
+            </a>
+        </td>
         <td>
             <a target="_blank" href="{% static '/static/images_geronimo/long.jpg' %}">
                 <img style="float:right;" src="{% static '/static/images_geronimo/thumbs/long.jpg' %}" /><br>
-                Longbow</td></a>
+                Longbow
+            </a>
+        </td>
         <td>
             <a target="_blank" href="{% static '/static/images_geronimo/bare.jpg' %}">
                 <img style="float:right;" src="{% static '/static/images_geronimo/thumbs/bare.jpg' %}" /><br>
-                Barebow</td></a>
+                Barebow
+            </a>
+        </td>
         <td>
             <a target="_blank" href="{% static '/static/images_geronimo/recurve.jpg' %}">
                 <img style="float:right;" src="{% static '/static/images_geronimo/thumbs/recurve.jpg' %}" /><br>
-                Recurve bow</td></a>
+                Recurve bow
+            </a>
+        </td>
         <td>
             <a target="_blank" href="{% static '/static/images_geronimo/compound.jpg' %}">
                 <img style="float:right;" src="{% static '/static/images_geronimo/thumbs/compound.jpg' %}" /><br>
-                Compound bow</td></a>
+                Compound bow
+            </a>
+        </td>
     </tr></table>
 
 
