Add pages for the activities

--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -24,10 +24,10 @@
 
     <h2>Uitslagen en verslagen</h2>
     <ul>
-        <li><a href="uitslagen/veldschieten.html">Workshop Veldschieten</a></li>
-        <li><a href="uitslagen/paasverschieting.html">Paasverschieting</a></li>
-        <li><a href="uitslagen/sinterkerstnieuwjaarsverschieting.html">SinterKerstNieuwjaarsverschieting</a></li>
-        <li><a href="uitslagen/koningschieten.html">Koningschieten</a></li>
+        <li><a href="{% url '/uitslagen/veldschieten.html' %}">Workshop Veldschieten</a></li>
+        <li><a href="{% url '/uitslagen/paasverschieting.html' %}">Paasverschieting</a></li>
+        <li><a href="{% url '/uitslagen/sinterkerstnieuwjaarsverschieting.html' %}">SinterKerstNieuwjaarsverschieting</a></li>
+        <li><a href="{% url '/uitslagen/koningschieten.html' %}">Koningschieten</a></li>
     </ul>
 
     <h2>Externe wedstrijden (buiten onze club):</h2>
