Add competition results pages

--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -7,20 +7,20 @@
 
 {% block body %}
     <div style="float: right;">
-        <img style="border-radius: 6px;" src="{% static '/static/images_activiteiten/ADL_055641.jpg' %}" /><br><br>
         <img style="border-radius: 6px;" src="{% static '/static/images_activiteiten/DSC_05935.jpg' %}" /><br><br>
+        <img style="border-radius: 6px;" src="{% static '/static/images_activiteiten/ADL_055641.jpg' %}" /><br><br>
         <img style="border-radius: 6px;" src="{% static '/static/images_activiteiten/DSC_100486.jpg' %}" />
     </div>
 
     <h2>Activiteiten</h2>
-    <div style="display:inline-block;">
-        <p>-</p>
-    </div>
+    <ul>
+        <li>28 december 2014: Kerstverschieting!</li>
+    </ul>
 
     <h2>Wedstrijden</h2>
-    <div style="display:inline-block;">
-        <p>-</p>
-    </div>
+    <ul>
+        <li>-</li>
+    </ul>
 
     <h2>Uitslagen en verslagen</h2>
     <ul>
