--- a/pages/404.html
+++ b/pages/404.html
@@ -18,12 +18,13 @@
         <p>
             Is er een link kapot op deze website?<br>
             Meldt het dan bij de web beheerder:<br>
-            e-mail: <a id="mail_contact">arne aa delaat dd net</a></p>
+            e-mail: <a id="mail_contact">arne aa delaat dd net</a>
         </p>
     </div>
 
     <div style="float:left; margin: 20px 5px 30px 45px; width:400px; display: block;">
-        <img style="border-radius: 10px; box-shadow: 2px 2px 10px #888;" src="{% static '/static/images_404/404.jpg' %}" />
+        <img style="border-radius: 10px; box-shadow: 2px 2px 10px #888;" alt=""
+             src="{% static '/static/images_404/404.jpg' %}" />
     </div>
 
 {% endblock %}
