--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -42,7 +42,7 @@
             Adres:<br>
             <input type="text" name="adres" id="adres" size="50" value="">
         </p>
-        <table border="0">
+        <table>
             <tr><td>Postcode:</td><td>Woonplaats:</td></tr>
             <tr><td><input type="text" name="postcode" id="postcode" size="10" value=""></td>
                 <td><input type="text" name="woonplaats" id="woonplaats" size="33" value=""></td></tr>
