--- a/pages/adres.html
+++ b/pages/adres.html
@@ -30,8 +30,8 @@
         volgende kaart met paars aangegeven:
     </p>
 
-    <img src="{% static '/static/images_adres/routebeschrijving1.png' %}" />
-    <img src="{% static '/static/images_adres/routebeschrijving2.png' %}" />
+    <img alt="" src="{% static '/static/images_adres/routebeschrijving1.png' %}" />
+    <img alt="" src="{% static '/static/images_adres/routebeschrijving2.png' %}" />
 
     <h3>Routebeschrijving buitenveld</h3>
 
@@ -59,6 +59,6 @@
         parkeerplaats tot het veld aangegeven met rood:
     </p>
 
-    <img src="{% static '/static/images_adres/buitenveld1.png' %}" />
-    <img src="{% static '/static/images_adres/buitenveld2.png' %}" />
+    <img alt="" src="{% static '/static/images_adres/buitenveld1.png' %}" />
+    <img alt="" src="{% static '/static/images_adres/buitenveld2.png' %}" />
 {% endblock %}
