--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -15,15 +15,17 @@
         proberen, dan kunt u eenmalig een beginnerscursus van 10 lessen
         volgen. Voor de cursus hoeft u zelf geen materiaal te hebben,
         huur van boog, pijlen en andere attributen zijn in de prijs van
-        de cursus inbegrepen. Na de cursus dient u <a href="{% url
-        '/lidmaatschap.html' %}">lid</a> te worden om verder te kunnen
-        blijven schieten bij de club en mee te doen aan activiteiten.
+        de cursus inbegrepen. Na de cursus dient u
+        <a href="{% url '/lidmaatschap.html' %}">lid</a> te worden om
+        verder te kunnen blijven schieten bij de club en mee te doen aan
+        activiteiten.
     </p>
 
-    <table width="250" border="0">
+    <table style="width: 250px;">
         <tr>
-            <th colspan="2" align="center">Prijzen eenmalige
-            beginnerscursus</th>
+            <th colspan="2" style="text-align: center;">
+                Prijzen eenmalige beginnerscursus
+            </th>
         </tr>
         <tr>
             <td>Jeugd, 12 t/m 17 jaar</td>
