--- a/pages/filmpjes.html
+++ b/pages/filmpjes.html
@@ -43,8 +43,8 @@
     </ul>
 
     <div class="quicktime" id="movie" style="background-color:#ffffff; height:665px;">
-        <img id="poster" style="margin:0px 235px;" data-id="D80_090906_2" class="showing"
-             src="{% static '/static/images_filmpjes/clicktoplay.jpg' %}" />
+        <img id="poster" alt="" style="margin:0px 235px;" class="showing"
+             data-id="D80_090906_2" src="{% static '/static/images_filmpjes/clicktoplay.jpg' %}" />
         <video id="player" height="0" width="0">
             <p>
                 Your browser does not support HTML 5, upgrade to a newer version that does:
