--- a/pages/geronimo.html
+++ b/pages/geronimo.html
@@ -48,31 +48,36 @@
     <table><tr>
         <td>
             <a target="_blank" href="{% static '/static/images_geronimo/composite.jpg' %}">
-                <img style="float:right;" src="{% static '/static/images_geronimo/thumbs/composite.jpg' %}" /><br>
+                <img style="float:right;" alt="Composite bow"
+                     src="{% static '/static/images_geronimo/thumbs/composite.jpg' %}" /><br>
                 Composite bow
             </a>
         </td>
         <td>
             <a target="_blank" href="{% static '/static/images_geronimo/long.jpg' %}">
-                <img style="float:right;" src="{% static '/static/images_geronimo/thumbs/long.jpg' %}" /><br>
+                <img style="float:right;" alt="Longbow"
+                     src="{% static '/static/images_geronimo/thumbs/long.jpg' %}" /><br>
                 Longbow
             </a>
         </td>
         <td>
             <a target="_blank" href="{% static '/static/images_geronimo/bare.jpg' %}">
-                <img style="float:right;" src="{% static '/static/images_geronimo/thumbs/bare.jpg' %}" /><br>
+                <img style="float:right;" alt="Barebow"
+                     src="{% static '/static/images_geronimo/thumbs/bare.jpg' %}" /><br>
                 Barebow
             </a>
         </td>
         <td>
             <a target="_blank" href="{% static '/static/images_geronimo/recurve.jpg' %}">
-                <img style="float:right;" src="{% static '/static/images_geronimo/thumbs/recurve.jpg' %}" /><br>
+                <img style="float:right;" alt="Recurvebow"
+                     src="{% static '/static/images_geronimo/thumbs/recurve.jpg' %}" /><br>
                 Recurve bow
             </a>
         </td>
         <td>
             <a target="_blank" href="{% static '/static/images_geronimo/compound.jpg' %}">
-                <img style="float:right;" src="{% static '/static/images_geronimo/thumbs/compound.jpg' %}" /><br>
+                <img style="float:right;" alt="Compound bow"
+                     src="{% static '/static/images_geronimo/thumbs/compound.jpg' %}" /><br>
                 Compound bow
             </a>
         </td>
@@ -82,22 +87,23 @@
     <h4>Cursussen</h4>
 
     <p class="textw">
-        Een paar keer per jaar worden <a href="{% url
-        '/beginnerscursus.html' %}">cursussen</a> gestart voor
-        beginnende schutters. De cursus bestaat uit 10 lessen waarin u
-        de beginselen van het handboogschieten wordt aangeleerd. Tijdens
-        de cursus kunt u gebruik maken van het materiaal van de
-        vereniging. Daarnaast is het mogelijk om bij de vereniging een
-        boog te huren, of u kunt besluiten zelf een boog te kopen.
+        Een paar keer per jaar worden
+        <a href="{% url '/beginnerscursus.html' %}">cursussen</a> gestart
+        voor beginnende schutters. De cursus bestaat uit 10 lessen
+        waarin u de beginselen van het handboogschieten wordt
+        aangeleerd. Tijdens de cursus kunt u gebruik maken van het
+        materiaal van de vereniging. Daarnaast is het mogelijk om bij de
+        vereniging een boog te huren, of u kunt besluiten zelf een boog
+        te kopen.
     </p>
 
 
     <h4>Meer over Geronimo</h4>
 
     <p class="textw">
-        Indien u meer wilt weten over Geronimo kunt u <a
-        href="{% url '/contact.html' %}">informatie aanvragen</a> of een keer
-        langskomen, op afspraak.
+        Indien u meer wilt weten over Geronimo kunt u
+        <a href="{% url '/contact.html' %}">informatie aanvragen</a> of
+        een keer langskomen, op afspraak.
     </p>
 
     <p class="textw">
