--- a/pages/lidmaatschap.html
+++ b/pages/lidmaatschap.html
@@ -29,7 +29,7 @@
         worden.
     </p>
 
-    <table border="0" width="250">
+    <table width="250">
         <tr>
             <th colspan="2" align="center">Jaarlijkse contributie</th>
         </tr>
