--- a/pages/links.html
+++ b/pages/links.html
@@ -9,7 +9,7 @@
     <h2>Links</h2>
 
     <table valign="top"><tr>
-        <td width="300px">
+        <td style="width: 300px">
             <h5>Officiële website</h5>
             <ul>
                 <li><a target="_blank" href="http://www.handboogsport.nl/">Nederlandse Handboog Bond</a></li>
@@ -33,7 +33,7 @@
                 <li><a target="_blank" href="http://www.handboogsport.nl/breedtesport/kaart/kaart.php">(overzicht Nederland)</a></li>
             </ul>
         </td>
-        <td width="240px">
+        <td style="width: 240px">
             <h5>Boog winkels</h5>
             <ul>
                 <li><a target="_blank" href="http://www.jvd.nl/">JVD</a></li>
