--- a/pages/openingstijden.html
+++ b/pages/openingstijden.html
@@ -25,21 +25,20 @@
 
     <p>Reguliere openingstijden voor vrij schieten:</p>
 
-    <table border="0">
-        <tr><th colspan="2" align="center">Dagen en tijden</th><th align="center">Zomer sluiting</th><th align="center">Opmerkingen</th></tr>
-        <tr><td width="80px">maandag</td><td width="80px">19:30 - 21:30</td><td align="right">1 juni - eind september</td></tr>
-        <tr><td style="color:#bbb;">dinsdag</td><td style="color:#bbb;">dicht</td><td></td></tr>
-        <tr><td style="color:#bbb;">woensdag</td><td style="color:#bbb;">dicht</td><td></td></tr>
-        <tr><td>donderdag</td><td>19:30 - 21:30</td><td align="right">open tijdens zomer</td></tr>
-        <tr><td>vrijdag</td><td>19:30 - 21:30</td><td align="right">1 juni - eind september</td></tr>
-        <tr><td style="color:#bbb;">zaterdag</td><td style="color:#bbb;">dicht</td><td></td><td></td></tr>
-        <tr><td>zondag</td><td>14:00 - 16:00</td><td align="right">1 juni - eind september</td></tr>
+    <table>
+        <tr><th colspan="2" style="text-align: center;">Dagen en tijden</th><th style="text-align: center;">Zomer sluiting</th><th style="text-align: center;">Opmerkingen</th></tr>
+        <tr><td style="width: 80px">maandag</td><td style="width: 80px">19:30 - 21:30</td><td style="text-align: right;">1 juni - eind september</td></tr>
+        <tr><td style="color: #bbb;">dinsdag</td><td style="color: #bbb;">dicht</td><td></td></tr>
+        <tr><td style="color: #bbb;">woensdag</td><td style="color: #bbb;">dicht</td><td></td></tr>
+        <tr><td>donderdag</td><td>19:30 - 21:30</td><td style="text-align: right;">open tijdens zomer</td></tr>
+        <tr><td>vrijdag</td><td>19:30 - 21:30</td><td style="text-align: right;">1 juni - eind september</td></tr>
+        <tr><td style="color: #bbb;">zaterdag</td><td style="color: #bbb;">dicht</td><td></td><td></td></tr>
+        <tr><td>zondag</td><td>14:00 - 16:00</td><td style="text-align: right;">1 juni - eind september</td></tr>
     </table>
 
     <p class="textw">
-        Op vrijdag is er soms om de <a href="{% url
-        '/beginnerscursus.html' %}">beginnerscursus</a>, dan kan er niet
-        vrij geschoten worden.
+        Op vrijdag is er soms om de <a href="{% url '/beginnerscursus.html' %}">
+        beginnerscursus</a>, dan kan er niet vrij geschoten worden.
     </p>
 
     <h4>Buitenveld</h4>
