--- a/pages/uitslagen/koningschieten.html
+++ b/pages/uitslagen/koningschieten.html
@@ -25,7 +25,7 @@
    
     <h3>Huidige titelhouders</h3>
 
-    <table border="0"><tr>
+    <table><tr>
         <th width="150px">Klasse</th><th width="150px">Koning(in)</th><th width="150px">Keizer(in)</th></tr>
         <tr><td>Recurve heren jeugd</td><td>Koen van Lierop</td><td></td></tr>
         <tr><td>Recurve heren</td><td>Jeffrey Maagdenberg</td><td>Peter de Wilde</td></tr>
