--- a/pages/uitslagen/koningschieten/2005.html
+++ b/pages/uitslagen/koningschieten/2005.html
@@ -33,7 +33,7 @@
             <h5>Jeugd (alleen jongens)</h5>
 
             <p>Recurve:</p>
-            <table width="210" border="0">
+            <table width="210">
                 <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
                 <tr><td>1</td><td>Arne de Laat</td><td>582</td></tr>
                 <tr><td>2</td><td>Yorik de Swart</td><td>564</td></tr>
@@ -43,7 +43,7 @@
             </table>
 
             <p>Compound:</p>
-            <table width="210" border="0">
+            <table width="210">
                 <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
                 <tr><td>1</td><td>Martyn den Besten</td><td>475</td></tr>
             </table>
@@ -54,7 +54,7 @@
                 Recurve:<br>
                 Heren
             </p>
-            <table width="210" border="0">
+            <table width="210">
                 <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
                 <tr><td>1</td><td>Maarten de Jong</td><td>499</td></tr>
                 <tr><td>2</td><td>Marcel van Baalen</td><td>490</td></tr>
@@ -66,7 +66,7 @@
                 Compound:<br>
                 Heren
             </p>
-            <table width="210" border="0">
+            <table width="210">
                 <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
                 <tr><td></td><td>Sander de Vries (1)</td><td>665</td></tr>
                 <tr><td>1</td><td>Peter de Wilde</td><td>616</td></tr>
@@ -76,7 +76,7 @@
             <p>
                 Dames
             </p>
-            <table width="210" border="0">
+            <table width="210">
                 <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
                 <tr><td></td><td>Françoise Weijters (2)</td><td>645</td></tr>
             </table> 
