--- a/pages/uitslagen/koningschieten/2006.html
+++ b/pages/uitslagen/koningschieten/2006.html
@@ -29,7 +29,7 @@
             Recurve:<br>
             Jongens:
         </p>
-        <table width="210" border="0">
+        <table width="210">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td></td><td>Pepijn</td><td></td></tr>
         </table>
@@ -37,7 +37,7 @@
         <p>
             Meiden:
         </p>
-        <table width="210" border="0">
+        <table width="210">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>1</td><td>Anna</td><td></td></tr>
         </table>
@@ -46,7 +46,7 @@
             Compound:<br>
             Jongens:
         </p>
-        <table width="210" border="0">
+        <table width="210">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>1</td><td>Martyn den Besten</td><td></td></tr>
         </table>
@@ -58,7 +58,7 @@
             Recurve:<br>
             Heren:
         </p>
-        <table width="210" border="0">
+        <table width="210">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>1</td><td>Maarten de Jong</td><td></td></tr>
             <tr><td>2</td><td>Marcel van Baalen</td><td></td></tr>
@@ -68,7 +68,7 @@
         <p>
             Dames:
         </p>
-        <table width="210" border="0">
+        <table width="210">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>1</td><td></td><td></td></tr></table>
 
@@ -76,7 +76,7 @@
             Compound:<br>
             Heren:
         </p>
-        <table width="210" border="0">
+        <table width="210">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>-</td><td>Sander de Vries (1)</td><td></td></tr>
             <tr><td>1</td><td>Peter de Wilde</td><td></td></tr>
@@ -86,7 +86,7 @@
         <p>
             Dames:
         </p>
-        <table width="210" border="0">
+        <table width="210">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>-</td><td>Françoise Weijters (1)</td><td></td></tr>
         </table>
