--- a/pages/uitslagen/koningschieten/2007.html
+++ b/pages/uitslagen/koningschieten/2007.html
@@ -27,7 +27,7 @@
         <td width="250" valign="top">
             <h5>Recurve</h5>
             <p>Heren:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
                 <tr><td>1</td><td>Willem van Bergeijk</td><td>547</td></tr>
                 <tr><td>2</td><td>Marcel van Baalen</td><td>543</td></tr>
@@ -37,7 +37,7 @@
                 <tr><td>6</td><td>Arne de Laat</td><td>488</td></tr>
             </table>
             <p>Jongens:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
                 <tr><td>1</td><td>Patric</td><td>488</td></tr>
             </table>
@@ -45,7 +45,7 @@
         <td valign="top">
             <h5>Compound</h5>
             <p>Heren:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
                 <tr><td>-</td><td>Sander de Vries (1)</td><td>692</td></tr>
                 <tr><td>1</td><td>Peter de Wilde</td><td>633</td></tr>
@@ -53,7 +53,7 @@
                 <tr><td>3</td><td>Peter de Jong</td><td>612</td></tr>
             </table>
             <p>Dames:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
                 <tr><td>-</td><td>Françoise Weijters (1)</td><td>603</td></tr>
             </table>
