--- a/pages/uitslagen/koningschieten/2009.html
+++ b/pages/uitslagen/koningschieten/2009.html
@@ -26,7 +26,7 @@
     <table><tr><td width="240" valign="top">
         <h5>Recurve</h5>
         <p>Heren:</p>
-        <table width="220" border="0">
+        <table width="220">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>1</td><td>Kasper Dieho</td><td></td></tr>
             <tr><td>2</td><td></td><td></td></tr>
@@ -36,12 +36,12 @@
             <tr><td>6</td><td></td><td></td></tr>
         </table>
         <p>Jongens:</p>
-        <table width="220" border="0">
+        <table width="220">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>1</td><td></td><td></td></tr>
         </table>
         <p>Dames:</p>
-        <table width="220" border="0">
+        <table width="220">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>1</td><td></td><td></td></tr>
             <tr><td>2</td><td></td><td></td></tr>
@@ -50,14 +50,14 @@
     <td width="240" valign="top">
         <h5>Compound</h5>
         <p>Heren:</p>
-        <table width="220" border="0">
+        <table width="220">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>-</td><td>Sander de Vries</td><td></td></tr>
             <tr><td>-</td><td>Peter de Wilde</td><td></td></tr>
             <tr><td>1</td><td>Peter de Jong</td><td></td></tr>
         </table>
         <p>Dames:</p>
-        <table width="220" border="0">
+        <table width="220">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>-</td><td>Françoise Weijters</td><td></td></tr>
         </table>
@@ -65,12 +65,12 @@
     <td width="240" valign="top">
         <h5>Barebow</h5>
         <p>Heren:</p>
-        <table width="220" border="0">
+        <table width="220">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>1</td><td>Arnold Dittmar</td><td></td></tr>
         </table>
         <p>Jongens:</p>
-        <table width="220" border="0">
+        <table width="220">
             <tr><th width="40">Plaats</th><th>Naam</th><th width="40">Score</th></tr>
             <tr><td>1</td><td>Jelle Dittmar</td><td></td></tr>
         </table>
