--- a/pages/workshop.html
+++ b/pages/workshop.html
@@ -7,8 +7,10 @@
 
 {% block body %}
     <div style="float: right;">
-        <img style="border-radius: 6px;" src="{% static '/static/images_workshop/ADL_061819.jpg' %}" /><br><br>
-        <img style="border-radius: 6px;" src="{% static '/static/images_workshop/ADL_061919.jpg' %}" />
+        <img style="border-radius: 6px;" alt=""
+             src="{% static '/static/images_workshop/ADL_061819.jpg' %}" /><br><br>
+        <img style="border-radius: 6px;" alt=""
+             src="{% static '/static/images_workshop/ADL_061919.jpg' %}" />
     </div>
 
     <h2>Workshop</h2>
