--- a/pages/nieuws.html
+++ b/pages/nieuws.html
@@ -11,10 +11,11 @@
     <h3>2014</h3>
 
     <p>
-        <b>20 Juli</b><br> Op 28 juni zal het <a href="{% url
-        '/activiteiten.html' %}">Koningschieten</a> weer plaats vinden.
-        Dit jaar zal de omroep <a href="http://www.slotstad.nl">Slotstad
-        RTV</a> een verslag doen van de wedstrijd.
+        <b>20 Juli</b><br> Op 28 juni zal het
+        <a href="{% url '/activiteiten.html' %}">Koningschieten</a>
+        weer plaats vinden. Dit jaar zal de omroep
+        <a href="http://www.slotstad.nl">Slotstad RTV</a> een verslag
+        doen van de wedstrijd.
     </p>
 
     <h3>2012</h3>
@@ -25,38 +26,38 @@
     </p>
     <p>
         <b>10 Juni</b><br> Op 2 mei kwam Scott M. Rodell weer een
-        workshop Manchu Archery geven, de <a href="{% url '/fotos.html'
-        %}">foto's</a> van deze workshop staan online. Mogelijk volgt er
+        workshop Manchu Archery geven, de <a href="{% url '/fotos.html' %}">
+        foto's</a> van deze workshop staan online. Mogelijk volgt er
         later ook nog een klein filmpje van de workshop.
     </p>
     <p>
-        <b>20 Maart</b><br> De <a href="{% url '/fotos.html'
-        %}">foto's</a> van de januari cursus staan online.
+        <b>20 Maart</b><br> De <a href="{% url '/fotos.html' %}">foto's</a>
+        van de januari cursus staan online.
     </p>
 
     <h3>2011</h3>
 
     <p>
-        <b>15 December</b><br> Er zijn twee <a href="{% url
-        '/filmpjes.html' %}">filmpjes</a> van de regiocompetitie
-        toegevoegd. Ook de kerstverschieting is toegevoegd aan de <a
-        href="{% url '/activiteiten.html' %}">activeiten pagina</a>.
+        <b>15 December</b><br> Er zijn twee
+        <a href="{% url '/filmpjes.html' %}">filmpjes</a> van de
+        regiocompetitie toegevoegd. Ook de kerstverschieting is toegevoegd
+        aan de <a href="{% url '/activiteiten.html' %}">activeiten pagina</a>.
     </p>
     <p>
         <b>15 November</b><br> Op zaterdag 26 november zal voor leden
         vanaf 16:30 uur het 30 jarig bestaan van Geronimo gevierd
-        worden, zie de <a href="{% url '/activiteiten.html'
-        %}">activeiten pagina</a> voor meer informatie.
+        worden, zie de <a href="{% url '/activiteiten.html' %}">
+        activeiten pagina</a> voor meer informatie.
     </p>
     <p>
         <b>4 September</b><br> Per 1 september heeft Hans Pruijs zijn
         bestuursfunctie overgedragen aan Amanda Manten en heeft Kasper
-        Dieho de vrijgekomen plek in het <a href="{% url '/contact.html'
-        %}">bestuur</a> opgevuld en zal activiteiten gaan coördineren.
+        Dieho de vrijgekomen plek in het <a href="{% url '/contact.html' %}">
+        bestuur</a> opgevuld en zal activiteiten gaan coördineren.
     </p>
     <p>
-        <b>21 Augustus</b><br> Het <a href="{% url '/activiteiten.html'
-        %}">Koningschieten</a> komt er weer aan! Bij de Activiteiten kan
+        <b>21 Augustus</b><br> Het <a href="{% url '/activiteiten.html' %}">
+        Koningschieten</a> komt er weer aan! Bij de Activiteiten kan
         je alle informatie vinden.
     </p>
     <p>
@@ -65,15 +66,16 @@
         gesorteerd.
     </p>
     <p>
-        <b>04 Mei</b><br> Er staat een nieuwe <a href="{% url
-        '/activiteiten.html' %}">activiteit</a> op de planning, namelijk
-        een Workshop Veldschieten op zondag 5 juni.<br> Geïnteresseerden
-        kunnen zich aanmelden bij de voorzitter.<br> Ook zijn een
-        aantal pagina's op de website geupdate en duidelijker gemaakt.
+        <b>04 Mei</b><br> Er staat een nieuwe
+        <a href="{% url '/activiteiten.html' %}">activiteit</a> op de planning,
+        namelijk een Workshop Veldschieten op zondag 5 juni.<br>
+        Geïnteresseerden kunnen zich aanmelden bij de voorzitter.<br>
+        Ook zijn een aantal pagina's op de website geupdate en
+        duidelijker gemaakt.
     </p>
     <p>
-        <b>15 April</b><br> De <a href="{% url '/openingstijden.html'
-        %}">openingstijden</a> van de zaal en het buitenveld voor dit
+        <b>15 April</b><br> De <a href="{% url '/openingstijden.html' %}">
+        openingstijden</a> van de zaal en het buitenveld voor dit
         jaar zijn bekend.<br> Sinds 1 april mag er op het buitenveld
         geschoten worden, die zal open zijn tot 1 oktober.<br> De zaal
         zal in deze periode deels gesloten zijn, zie de pagina
@@ -88,37 +90,37 @@
         nu <a href="{% url '/fotos.html' %}">foto's</a> van de demo online.
     </p>
     <p>
-        <b>23 Februari</b><br> Nieuwe <a href="{% url '/fotos.html'
-        %}">foto's</a> van de beginnerscursus en de
+        <b>23 Februari</b><br> Nieuwe <a href="{% url '/fotos.html' %}">
+        foto's</a> van de beginnerscursus en de
         SinterKerstNieuwjaars verschieting.
     </p>
     <p>
-        <b>30 Januari</b><br> <a href="{% url '/activiteiten.html'
-        %}">Aankondiging</a> van de paasverschieting (24 april).
+        <b>30 Januari</b><br> <a href="{% url '/activiteiten.html' %}">
+        Aankondiging</a> van de paasverschieting (24 april).
     </p>
 
     <h3>2010</h3>
 
     <p>
         <b>14 December</b><br> Aankondiging van een komende verschieting
-        (9 januari).<br> Ook zijn er nieuwe <a href="{% url
-        '/fotos.html' %}">foto's</a> van 2010 geplaatst.
+        (9 januari).<br> Ook zijn er nieuwe <a href="{% url '/fotos.html' %}">
+        foto's</a> van 2010 geplaatst.
     </p>
     <p>
-        <b>07 December</b><br> De website heeft nu een <a href="{% url
-        '/aanmelden.html' %}">aanmeldings pagina</a> voor de
+        <b>07 December</b><br> De website heeft nu een
+        <a href="{% url '/aanmelden.html' %}">aanmeldings pagina</a> voor de
         beginnerscursus.
     </p>
     <p>
-        <b>05 December</b><br> Het <a href="{% url '/fotos.html'
-        %}">foto album</a> is vernieuwd, binnenkort zullen ook nieuwe
+        <b>05 December</b><br> Het <a href="{% url '/fotos.html' %}">
+        foto album</a> is vernieuwd, binnenkort zullen ook nieuwe
         foto's geplaatst worden.
     </p>
     <p>
         <b>28 November</b><br> De functie van voorzitter is overgedragen
         van Sander de Vries aan Arnold Dittmar.<br> De datums voor de
-        komende <a href="{% url '/beginnerscursus.html'
-        %}">beginnerscursussen</a> zijn vast gelegd. 
+        komende <a href="{% url '/beginnerscursus.html' %}">
+        beginnerscursussen</a> zijn vast gelegd. 
     </p>
     <p>
         <b>19 Oktober</b><br> Er zal een Algemene Ledenvergardering
@@ -128,8 +130,8 @@
     </p>
     <p>
         <b>18 Oktober</b><br> De data van de nieuwe beginnerscursus zijn
-        bekend. Ga naar <a href="{% url '/beginnerscursus.html'
-        %}">beginnerscursus</a> voor meer informatie.
+        bekend. Ga naar <a href="{% url '/beginnerscursus.html' %}">
+        beginnerscursus</a> voor meer informatie.
     </p>
     <p>
         <b>16 Augustus</b><br> Er is een nieuw filmpje toegevoegd aan de
