--- a/pages/uitslagen/koningschieten/2014.html
+++ b/pages/uitslagen/koningschieten/2014.html
@@ -25,7 +25,7 @@
         <td width="240" valign="top">
             <h5>Recurve</h5>
             <p>Heren:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th></tr>
                 <tr><td>1</td><td>Jeffrey Maagedenberg</td></tr>
                 <tr><td>2</td><td>Jack van Hooij</td></tr>
@@ -36,7 +36,7 @@
                 <tr><td>7</td><td>Willem Mol</td></tr>
             </table>
             <p>Jongens:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th></tr>
                 <tr><td>1</td><td>Koen van Lierop</td></tr>
                 <tr><td>2</td><td>Rinze Santing</td></tr>
@@ -44,13 +44,13 @@
                 <tr><td>4</td><td>Tim Bijlhout</td></tr>
             </table>
             <p>Dames:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th></tr>
                 <tr><td>1</td><td>Petra Bijlhout</td></tr>
                 <tr><td>2</td><td>Marga van Doorn</td></tr>
             </table>
             <p>Meiden:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th></tr>
                 <tr><td>1</td><td>Bibi Brettschneider</td></tr>
             </table>
@@ -58,7 +58,7 @@
         <td width="240" valign="top">
             <h5>Compound</h5>
             <p>Heren:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th></tr>
                 <tr><td>1</td><td>Kasper Dieho</td></tr>
             </table>
@@ -66,7 +66,7 @@
         <td width="240" valign="top">
             <h5>Barebow</h5>
             <p>Heren:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th></tr>
                 <tr><td>1</td><td>Arnold Dittmar</td></tr>
                 <tr><td>2</td><td>Shaun Maitland</td></tr>
@@ -74,22 +74,22 @@
                 <tr><td>4</td><td>Gerwin Postma</td></tr>
             </tr></table>
             <p>Jongens:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th></tr>
                 <tr><td>1</td><td>Julan Wardenier</td></tr>
             </tr></table>
             <p>Dames:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th></tr>
                 <tr><td>1</td><td>Conny Buzink</td></tr>
             </tr></table>
             <p>Meiden:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th></tr>
                 <tr><td>1</td><td>Arwende Wardenier</td></tr>
             </tr></table>
             <p>Alternatief:</p>
-            <table width="220" border="0">
+            <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th></tr>
                 <tr><td>1</td><td>Winfrid van den Kroef</td></tr>
             </tr></table>
