Update activities and few more HTML fixes

--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -7,9 +7,12 @@
 
 {% block body %}
     <div style="float: right;">
-        <img style="border-radius: 6px;" src="{% static '/static/images_activiteiten/DSC_05935.jpg' %}" /><br><br>
-        <img style="border-radius: 6px;" src="{% static '/static/images_activiteiten/ADL_055641.jpg' %}" /><br><br>
-        <img style="border-radius: 6px;" src="{% static '/static/images_activiteiten/DSC_100486.jpg' %}" />
+        <img style="border-radius: 6px;" alt=""
+             src="{% static '/static/images_activiteiten/DSC_05935.jpg' %}" /><br><br>
+        <img style="border-radius: 6px;" alt=""
+             src="{% static '/static/images_activiteiten/ADL_055641.jpg' %}" /><br><br>
+        <img style="border-radius: 6px;" alt=""
+             src="{% static '/static/images_activiteiten/DSC_100486.jpg' %}" />
     </div>
 
     <h2>Activiteiten</h2>
@@ -36,7 +39,7 @@
         <a href="http://www.handboogsport.nl/kalender/" target="_blank">Algemene Wedstrijdkalender</a>
     </p>
     <ul>
-        <li><a href="activiteiten_assets/2014_25m1p.pdf" target="_blank">2014-2015 - 25 meter 1 pijl en NHB-beker</a></li>
+        <li><a href="http://www.zwartmikkers.nl/short%20metric.html" target="_blank">25 januari 2015 - Short Metric, Zwartmikkers in Middelbeers</a></li>
         <li><a href="http://www.eilandschutters.nl/files/WA%202015%20flyer.pdf" target="_blank">14-15 februari 2015 - Winteranimal, Eilandschutters op Texel</a></li>
     </ul>
 {% endblock %}
