--- a/pages/lidmaatschap.html
+++ b/pages/lidmaatschap.html
@@ -29,9 +29,9 @@
         worden.
     </p>
 
-    <table width="250">
+    <table style="width: 250px;">
         <tr>
-            <th colspan="2" align="center">Jaarlijkse contributie</th>
+            <th colspan="2" style="text-align: center;">Jaarlijkse contributie</th>
         </tr>
         <tr>
             <td>Aspiranten t/m 14 jaar</td>
