Update activities for 2015

--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -17,12 +17,19 @@
 
     <h2>Activiteiten</h2>
     <ul>
-        <li>28 december 2014: Kerstverschieting!</li>
+        <li><b>16 januari - 20 maart 2015</b> - Beginnerscursus</li></li>
+        <li><b>(onbekend)</b> - Workshop pezen maken</li>
+        <li><b>(onbekend)</b> - Workshop instinctief schieten</li>
+        <li><b>april 2015</b> - Introductie buitenschieten</li>
+        <li><b>11 oktober 2015</b> - Historische doedag</li>
+        <li><b>25 september - 27 november 2015</b> - Beginnerscursus</li>
+        <li><b>27 december 2015</b> - Kerstverschieting</li>
     </ul>
 
     <h2>Wedstrijden</h2>
     <ul>
-        <li>-</li>
+        <li><b>februari 2015</b> - Club competitie</li>
+        <li><b>27 juni 2015</b> - Koningsschieten</li>
     </ul>
 
     <h2>Uitslagen en verslagen</h2>
