--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -17,7 +17,7 @@
 
     <h2>Activiteiten</h2>
     <ul>
-        <li><b>16 januari - 20 maart 2015</b> - Beginnerscursus</li></li>
+        <li><b>16 januari - 20 maart 2015</b> - Beginnerscursus</li>
         <li><b>(onbekend)</b> - Workshop pezen maken</li>
         <li><b>(onbekend)</b> - Workshop instinctief schieten</li>
         <li><b>april 2015</b> - Introductie buitenschieten</li>
