--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,7 @@
             <a id="email_rayon" href="#">Jeffrey Maagdenberg</a> &ndash; vicevoorzitter en rayonzaken
         </li>
         <li>
-            <a id="email_sec" href="#">Wim Ponsen</a> &ndash; secretaris
+            <a id="email_sec" href="#">Erik van de Brug</a> &ndash; secretaris
             <ul>
                 <li>Aanspreekpunt nieuwe cursisten</li>
                 <li>Ledenlijst</li>
