--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -79,9 +79,9 @@
         definitief te maken moet u de helft van het cursus geld
         overmaken naar de Geronimorekening. Tijdens de cursus krijgt u
         alle materiaal van de club, wel is het handig strakke kleding
-        aan te doen en makkelijke loop schoenen. Neem contact op met de
-        secretaris <a id="email_6" href="#">Wim Ponsen</a> voor meer
-        informatie.
+        aan te doen en makkelijke loop schoenen. 
+        Neem <a href="{% url '/contact.html' %}"><b>contact</b></a> op met de
+        <a id="email_6" href="#"><b>secretaris</b></a> voor meer informatie.
     </p>
 
 {% endblock %}
