--- a/pages/nieuws.html
+++ b/pages/nieuws.html
@@ -7,7 +7,20 @@
 
 {% block body %}
     <h2>Nieuws</h2>
+ 
+    <h3>2015</h3>
 
+    <p>
+        <b>27 Juni</b><br>Op 27 juni is weer het traditionele  <a href="{% url '/activiteiten.html' %}">Koningschieten</a>. Er zijn zoals altijd weer drie categorieën, namelijk
+        <ul>
+         <li>Traditioneel & Barebow</li>
+         <li>Recurve </li>
+         <li>Compound</li>
+        </ul>
+       <b>01 Juni</b><br>Vanaf 1 juni is in verband met de zomersluiting de zaal alleen beschikbaar op de <a href="{% url '/openingstijden.html' %}">donderdagavonden</a>.</br> We hopen iedereen op het veld te mogen begroeten. <br/>
+       <br/>
+    </p>
+ 
     <h3>2014</h3>
 
     <p>
