--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,8 +6,15 @@
 {% block logo-position %}top: -160px; left: 240px;{% endblock %}
 
 {% block body %}
+    <div style="float:right;width:30%">
+        <h2>Facebook</h2>
+        <p>
+            <a href="https://www.facebook.com/pages/SHS-Geronimo/279675712156072/" target="_blank"> 
+                <i style="font-size: 2em;" class="fa fa-facebook-square"></i> SHS Geronimo
+            </a>
+        </p>
+    </div>
 
-<div id="dvLeft" style="width:70%;float:left">
     <h2>Bestuursleden</h2>
 
     <p style="font-style: italic;">Per 7 mei, 2014</p>
@@ -70,18 +77,6 @@
         Indien u op- of aanmerkingen heeft over deze website, mail dan
         naar: <a href="#" id="email_web">Arne de Laat</a>.
     </p>
-    </div>
-    <div id="dvRight" style="float:right;width:30%">
-        <h2>Facebook</h2>
-    <p>
-    <div class="fb-page" data-href="https://www.facebook.com/pages/SHS-Geronimo/279675712156072" layout="box_count" data-width="280" data-height="130" data-hide-cover="false" data-show-facepile="false" data-show-posts="false">
-      <div class="fb-xfbml-parse-ignore">
-      <blockquote cite="https://www.facebook.com/pages/SHS-Geronimo/279675712156072"><a href="https://www.facebook.com/pages/SHS-Geronimo/279675712156072">SHS Geronimo</a></blockquote>
-      </div>
-    </div>
-    </p>    
-        
-    </div>
 {% endblock %}
 
 {% block script %}
