Extra quote verwijderd ..
Dubbele quote in class ..
NB: Hoe valideer jij de HTML5 ?

--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -71,7 +71,7 @@
                 <hr>
 
                     <h3>Cursus 2. Traditioneel schieten</h3>
-                    <p class="textw"">
+                    <p class="textw">
  De cursus Traditioneel schieten (met houten boog zonder richtmiddelen) bestaat uit 5 lessen van een uur en wordt één keer per jaar georganiseerd en wel in <b>juni</b>. De groep bestaat uit maximaal 5 cursisten.
                     </p>
                     <table style="width: 250px;">
