Aanpassingen tbv Koningsschieten
Standen en Scores toegevoegd

--- a/pages/uitslagen/koningschieten/2014.html
+++ b/pages/uitslagen/koningschieten/2014.html
@@ -9,7 +9,8 @@
     <h2>Koningschieten 2014</h2>
     <p>
         <a href="{% url '/uitslagen/koningschieten.html' %}">Koningschieten</a>:
-        <a href="{% url '/uitslagen/koningschieten/2009.html' %}">2009</a>,
+        <a href="{% url '/uitslagen/koningschieten/2015.html' %}">2015</a>,        
+		<a href="{% url '/uitslagen/koningschieten/2009.html' %}">2009</a>,
         <a href="{% url '/uitslagen/koningschieten/2007.html' %}">2007</a>,
         <a href="{% url '/uitslagen/koningschieten/2006.html' %}">2006</a>,
         <a href="{% url '/uitslagen/koningschieten/2005.html' %}">2005</a>.
@@ -27,7 +28,7 @@
             <p>Heren:</p>
             <table width="220">
                 <tr><th width="40">Plaats</th><th>Naam</th></tr>
-                <tr><td>1</td><td>Jeffrey Maagedenberg</td></tr>
+                <tr><td>1</td><td>Jeffrey Maagdenberg</td></tr>
                 <tr><td>2</td><td>Jack van Hooij</td></tr>
                 <tr><td>3</td><td>Jan van Doorn</td></tr>
                 <tr><td>4</td><td>Wout van der  Brug</td></tr>
