--- a/pages/uitslagen/koningschieten.html
+++ b/pages/uitslagen/koningschieten.html
@@ -10,7 +10,7 @@
     <p>
         Het Koningschieten is de wedstrijd van het jaar. De clubleden
         strijden dan tegen elkaar. Er wordt geschoten in de klasses
-        traditioneel (40 en 20 meter), recurve en compound (50 en 30
+        traditioneel (30 en 20 meter), recurve en compound (50 en 30
         meter) en jeugd (30 en 20 meter), elk onder verdeeld in heren en
         vrouwen.
     </p>
@@ -26,7 +26,26 @@
     <h3>Huidige titelhouders</h3>
 
     <table><tr>
-        <th width="150px">Klasse</th><th width="150px">Koning(in)</th><th width="150px">Keizer(in)</th></tr>
+        <th colspan="3" width="450px">Klassement 2015</th></tr>
+        <tr><th width="150px">Klasse</th><th width="150px">Koning(in)</th><th width="150px">Keizer(in)</th></tr>
+        <tr><td>Recurve heren jeugd</td><td>Oscar Snijders</td><td></td></tr>
+        <tr><td>Recurve heren</td><td>Jeffrey Maagdenberg</td><td>Peter de Wilde</td></tr>
+        <tr><td>Recurve dames jeugd</td><td>Maeike Maagdenberg</td><td></td></tr>
+        <tr><td>Recurve dames</td><td>Conny Buzink</td><td></td></tr>
+        <tr><td>Compound heren jeugd</td><td>Martyn den Besten</td><td></td></tr>
+        <tr><td>Compound heren</td><td>Arjan van Doorn</td><td>Sander de Vries</td></tr>
+        <tr><td>Compound dames</td><td>Françoise Weijters-Bage</td><td>Françoise Weijters-Bage</td></tr>
+        <tr><td>Barebow heren jeugd</td><td>Julan Wardenier</td><td></td></tr>
+        <tr><td>Barebow heren</td><td>Shaun Maitland</td><td>Arnold Dittmar</td></tr>
+        <tr><td>Barebow dames jeugd</td><td>Arwende Wardenier</td><td></td></tr>
+        <tr><td>Barebow dames</td><td>Conny Buzink</td><td>Hetty van Eldijk</td></tr>
+    </table>    
+    
+    <br>
+    
+    <table>
+        <tr><th colspan="3" width="450px">Klassement 2014</th></tr>
+        <tr><th width="150px">Klasse</th><th width="150px">Koning(in)</th><th width="150px">Keizer(in)</th></tr>
         <tr><td>Recurve heren jeugd</td><td>Koen van Lierop</td><td></td></tr>
         <tr><td>Recurve heren</td><td>Jeffrey Maagdenberg</td><td>Peter de Wilde</td></tr>
         <tr><td>Recurve dames jeugd</td><td>Bibi Brettschneider</td><td></td></tr>
@@ -42,6 +61,7 @@
 
     <h3>Uitslagen</h3>
     <ul>
+        <li><a href="{% url '/uitslagen/koningschieten/2015.html' %}">2015</a></li>
         <li><a href="{% url '/uitslagen/koningschieten/2014.html' %}">2014</a></li>
         <li><a href="{% url '/uitslagen/koningschieten/2009.html' %}">2009</a></li>
         <li><a href="{% url '/uitslagen/koningschieten/2007.html' %}">2007</a></li>
