--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -62,9 +62,10 @@
         </p>
 
         <p style="font-weight:normal;"><b>Beginnerscursus:</b><br>
-            <input type="radio" name="datum" id="datum_2" value="Januari 2015" disabled> Januari 2015 (vol)<br>
-            <input type="radio" name="datum" id="datum_3" value="Oktober 2015"> Oktober 2015<br>
-            <input type="radio" name="datum" id="datum_4" value="Januari 2016"> Januari 2016
+            <input type="radio" name="datum" id="datum_1" value="Januari 2016" disabled> Januari 2016 (vol)<br>
+            <input type="radio" name="datum" id="datum_2" value="Oktober 2016"> Oktober 2016<br>
+            <input type="radio" name="datum" id="datum_3" value="Januari 2017"> Januari 2017<br>
+            <input type="radio" name="datum" id="datum_4" value="Oktober 2017"> Oktober 2017<br>
         </p>
         <input type="submit" value=" Verstuur aanmelding "><br>
     </form>
