Update Over Geronimo

--- a/pages/geronimo.html
+++ b/pages/geronimo.html
@@ -102,8 +102,7 @@
 
     <p class="textw">
         Indien u meer wilt weten over Geronimo kunt u
-        <a href="{% url '/contact.html' %}">informatie aanvragen</a> of
-        een keer langskomen, op afspraak.
+        <a href="{% url '/contact.html' %}">informatie aanvragen</a>.
     </p>
 
     <p class="textw">
