Update text for those interested in beginners course

--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -9,10 +9,6 @@
 <h2>Beginnerscursussen</h2>
 
 <p class="textw">
-    Geronimo verwelkomt graag aspirant leden. U kunt donderdagavond tussen 8 en 9 uur
-    langskomen om eens te kijken wat boogschieten bij Geronimo precies inhoudt. Bent u
-    geïnteresseerd om het ook eens te proberen, dan kunt u één van onze twee cursussen 
-    volgen.<br>
     Na de cursus kunt u <a href="lidmaatschap.html">lid</a> worden om verder te kunnen blijven schieten bij de club en mee te doen aan activiteiten.
     </p>
     <hr>
@@ -121,6 +117,8 @@
                                         <b>secretaris</b>
                                     </a> voor meer informatie.
                                 </p>
+    Geronimo verwelkomt graag aspirant leden. Bent u geïnteresseerd, dan
+    kunt u één van onze cursussen volgen.<br>
 
 {% endblock %}
 
@@ -132,4 +130,3 @@
         _secr2 = _mailt + _secr + _at + _extger;
     document.getElementById('email_6').href = _secr2;
 {% endblock %}
-                                
